RESOLVED FIXED293928
[Safe CPP] Address Warnings in RenderSlider
https://bugs.webkit.org/show_bug.cgi?id=293928
Summary [Safe CPP] Address Warnings in RenderSlider
Brandon
Reported 2025-06-02 16:10:01 PDT
Fix Safe CPP warnings in RenderSlider.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-02 16:16:46 PDT
Brandon
Comment 2 2025-06-02 16:39:38 PDT
EWS
Comment 3 2025-06-04 10:08:44 PDT
Committed 295822@main (142dbe3af82c): <https://commits.webkit.org/295822@main> Reviewed commits have been landed. Closing PR #46232 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.