[Safe CPP] Address Warnings in RenderSlider https://bugs.webkit.org/show_bug.cgi?id=293928 rdar://problem/152461354

Reviewed by Tim Nguyen.

Fix Safe CPP warnings in RenderSlider.

* Source/WebCore/SaferCPPExpectations/UncheckedCallArgsCheckerExpectations:
* Source/WebCore/SaferCPPExpectations/UncheckedLocalVarsCheckerExpectations:
* Source/WebCore/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:
* Source/WebCore/SaferCPPExpectations/UncountedLocalVarsCheckerExpectations:
* Source/WebCore/rendering/RenderSlider.cpp:
(WebCore::RenderSlider::element const):
(WebCore::RenderSlider::inDragMode const):
(WebCore::RenderSlider::valueRatio const):
* Source/WebCore/rendering/RenderSlider.h:

Canonical link: https://commits.webkit.org/295822@main